--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,14 +3,13 @@ FROM python:3.7.7
 ENV ROOTDIR /var/lib/app
 WORKDIR ${ROOTDIR}
 
-ADD requirements.txt ${ROOTDIR}
-RUN pip install -r requirements.txt
-
 ADD . ${ROOTDIR}
+
+RUN pip install -r requirements.txt
 
 RUN python manage.py collectstatic --noinput
 
-COPY entrypoint.sh /usr/local/bin/
+RUN ln -s ${ROOTDIR}/entrypoint.sh /usr/local/bin/
 
 RUN entrypoint.sh init && \
   entrypoint.sh createsuperuser
